website/code/partialsums-icpp.log
BUILD COMMANDS FOR: partialsums.icpp

Fri Mar 31 20:33:32 PST 2006

/opt/intel/cc/9.0/bin/icpc -c -O3 -ip -static -unroll  partialsums.c++ -o partialsums.c++.o &&  \
        /opt/intel/cc/9.0/bin/icpc partialsums.c++.o -o partialsums.icpp_run -O3 -ip -static -unroll  
/usr/include/c++/4.0.3/cmath(353): error: identifier "__builtin_powi" is undefined
    { return __builtin_powi(__x, __i); }
             ^

/usr/include/c++/4.0.3/cmath(357): error: identifier "__builtin_powif" is undefined
    { return __builtin_powif(__x, __n); }
             ^

/usr/include/c++/4.0.3/cmath(361): error: identifier "__builtin_powil" is undefined
    { return __builtin_powil(__x, __n); }
             ^

compilation aborted for partialsums.c++ (code 2)
make[3]: [partialsums.icpp_run] Error 2 (ignored)
rm: cannot remove `partialsums.c++.o': No such file or directory
rm: cannot remove `partialsums.o': No such file or directory
make[3]: [partialsums.icpp_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

partialsums.icpp_run %A
Error, could not exec partialsums.icpp_run 25000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/partialsums:/opt/shootout/shootout/bench/partialsums/tmp:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/lib/smarteiffel/bin:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
